{
  "version": 4,
  "terraform_version": "1.2.3",
  "serial": 69,
  "lineage": "7a8a72a5-3447-80c3-6d4c-456b6b17c4fd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wp-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05cb47ba7165df4a7",
            "arn": "arn:aws:ec2:eu-north-1:272753106437:instance/i-07d2ceca1e8b35329",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07d2ceca1e8b35329",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-090139993a73a42f8",
            "private_dns": "ip-10-50-1-52.eu-north-1.compute.internal",
            "private_ip": "10.50.1.52",
            "public_dns": "ec2-16-170-239-79.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.170.239.79",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0422bb52217182047",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-042be99d4ff0ea407",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-040408654fa8139f1"
            ]
          },
          "dependencies": [
            "aws_security_group.counter-app-security",
            "aws_subnet.counter-app-subnet",
            "aws_vpc.counter-app-vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "counter-app-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:272753106437:internet-gateway/igw-0b34b292374de89f6",
            "id": "igw-0b34b292374de89f6",
            "owner_id": "272753106437",
            "vpc_id": "vpc-00d160b2d55b8eb08"
          },
          "dependencies": [
            "aws_vpc.counter-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "counter-app-routing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:272753106437:route-table/rtb-056a13a28b13a7231",
            "id": "rtb-056a13a28b13a7231",
            "owner_id": "272753106437",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b34b292374de89f6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00d160b2d55b8eb08"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.counter-app-gw",
            "aws_vpc.counter-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-004bcec51808ab59e",
            "route_table_id": "rtb-056a13a28b13a7231",
            "subnet_id": "subnet-042be99d4ff0ea407"
          },
          "dependencies": [
            "aws_internet_gateway.counter-app-gw",
            "aws_route_table.counter-app-routing",
            "aws_subnet.counter-app-subnet",
            "aws_vpc.counter-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "counter-app-security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:272753106437:security-group/sg-040408654fa8139f1",
            "description": "counter-app-security",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-040408654fa8139f1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "65.108.204.154/32",
                  "65.108.204.148/32"
                ],
                "description": "ssh",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "counter-app-security",
            "name_prefix": "",
            "owner_id": "272753106437",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow HTTP"
            },
            "tags_all": {
              "Name": "Allow HTTP"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d160b2d55b8eb08"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.counter-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "counter-app-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:272753106437:subnet/subnet-042be99d4ff0ea407",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.50.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-042be99d4ff0ea407",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "272753106437",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "counter-app-10-50-1-0",
              "Tier": "Public"
            },
            "tags_all": {
              "Name": "counter-app-10-50-1-0",
              "Tier": "Public"
            },
            "vpc_id": "vpc-00d160b2d55b8eb08"
          },
          "dependencies": [
            "aws_vpc.counter-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "counter-app-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:272753106437:vpc/vpc-00d160b2d55b8eb08",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.50.0.0/16",
            "default_network_acl_id": "acl-01f8d5f17c109d7ee",
            "default_route_table_id": "rtb-0dee869ff93314483",
            "default_security_group_id": "sg-061f745685b6e437f",
            "dhcp_options_id": "dopt-034b0b4c2dc1870bc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00d160b2d55b8eb08",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dee869ff93314483",
            "owner_id": "272753106437"
          }
        }
      ]
    }
  ]
}